--- a/index.html
+++ b/index.html
@@ -54,14 +54,43 @@
       <li class="nav-item">
         <a class="nav-link" href="#faq">FAQ</a>
       </li>
+   <li class="nav-item ms-lg-3">
+  <a class="main-btn" href="tel:1200345123">1200 345 123</a>
+</li>
+
 
     </ul>
   </div>
 </nav>
-
-     </header>
+</header>
 
     <!-- section-1 top-banner -->
+<section id="home">
+  <div class="container-fluid px-0 top-banner">
+    <div class="wrapper">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-5 col-md-6">
+          <h1>Good food choices are good investments.</h1>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Etiam et purus a odio finibus bibendum amet leo.
+          </p>
+
+          <div class="mt-4">
+            <button class="main-btn">
+              Order now <i class="fas fa-shopping-basket ps-3"></i>
+            </button>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+</section>
+
 
     <!-- section-2 counter -->
 
